<resources>
    <string name="app_name">CyberClinic</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Sign_in_Text">Already have an account?</string>
    <string name="this_link">this link</string>
    <string name="get_started">GET STARTED</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="creat_account">Creat Account</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="signin"><u>Sign in</u></string>
</resources>
